# zfoh.ch

./: .gitignore  .travis.yml  CNAME  LICENSE  README.md  cabal.project  flake.nix  index.html  out.html  privacy-policy.html  stack.yaml  terms-and-conditions.html  zfoh.cabal
.github/workflows/: ci.yaml
_site/: index.html  privacy-policy.html
_site/css/: zfoh.css  zurihac2020.css
_site/zurihac2019/: index.html  projects.html
_site/zurihac2020/: index.html  projects.html
_site/zurihac2021/: index.html
content/: index.html  meetup.html  privacy-policy.html  terms-and-conditions.html
content/index/: meetup.html  videos.html
content/sections/: about-us.html  board.html  donations.html  meetup.html  zurihac.html
content/zurihac2019/: index.html  projects.html  projects.json
content/zurihac2020/: index.html  projects-raw.json  projects.html  projects.json
content/zurihac2021/: index.html  projects.html  projects.json
content/zurihac2022/: .projects.json.swp  index.html  projects.html  projects.json
content/zurihac2023/: index.html  schedule.js
content/zurihac2024/: index.html
content/zurihac2025/: index.html
content/zurihac2025-preview/: index.html
content/zurihac2026/: index.html
content/zurihac2027/: index.html
css/: style.css  zfoh.css  zurihac.css  zurihac2019.css  zurihac2020.css  zurihac2021.css  zurihac2022.css  zurihac2023.css  zurihac2024.css  zurihac2025.css  zurihac2026.css  zurihac2027.css
deploy/: build.sh  deploy.sh  travis.zfoh.ch.key.enc
donate/: index.html
images/zurihac2025/: hex.html
sections/: about-us.html  board.html  meetup.html  videos.html  zurihac.html
src/: AesonOptions.hs  ImportProjects.hs  Main.hs  Meetup.hs  Projects.hs
src/Projects/: Definition.hs
src/ZuriHac/: Projects.hs
templates/: main.html  zfoh.html  zurihac2019.html  zurihac2020.html  zurihac2021.html  zurihac2022.html  zurihac2023.html  zurihac2024.html  zurihac2025.html  zurihac2026.html  zurihac2027.html
zurihac2019/: index.html  projects.html  projects.json
zurihac2019/projects/: projects.js
zurihac2020/: index.html  projects.html  projects.json
zurihac2020/projects/: README.md  projects.js
zurihac2021/: index.html  projects.html  projects.json
zurihac2021/projects/: README.md  projects.css
zurihac2022/: index.html  projects.html  projects.json
zurihac2023/: index.html  schedule.js
zurihac2023/projects/: index.html
zurihac2024/: index.html
zurihac2025/: index.html
zurihac2025-preview/: index.html
zurihac2026/: index.html
zurihac2027/: index.html
(+55 files in other folders)
