Name:           zfoh
Version:        0.1.0.0
Description:    Please see the README on Github at <https://github.com/githubuser/zfoh#readme>
Homepage:       https://github.com/zfoh/zfoh.ch#readme
Bug-reports:    https://github.com/zfoh/zfoh.ch#issues
Author:         Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:     Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:      2018 Jasper Van der Jeugt
License:        BSD3
License-file:   LICENSE
Build-type:     Simple
Cabal-version:  >= 1.10

Source-repository head
  Type: git
  Location: https://github.com/zfoh/zfoh.ch

Executable zfoh
  Main-is:          Main.hs
  Hs-source-dirs:   src
  Ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  Default-language: Haskell2010

  Other-modules:
    Meetup
    ZuriHac.Projects

  Build-depends:
    aeson        >= 1.2  && < 1.5,
    base         >= 4.7  && < 5,
    binary       >= 0.8  && < 0.9,
    blaze-html   >= 0.9  && < 0.10,
    bytestring   >= 0.10 && < 0.11,
    filepath     >= 1.4  && < 1.5,
    hakyll       >= 4.12 && < 4.13,
    http-conduit >= 2.3  && < 2.4,
    process      >= 1.6  && < 1.7,
    text         >= 1.2  && < 1.3,
    time         >= 1.8  && < 1.9
