Cabal-version: >=1.10
Name:          zfoh
Version:       0.1.0.0
License:       BSD3
License-file:  LICENSE
Copyright:     2018 Jasper Van der Jeugt
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Homepage:      https://github.com/zfoh/zfoh.ch#readme
Bug-reports:   https://github.com/zfoh/zfoh.ch#issues
Description:   Please see the README on Github at <https://github.com/githubuser/zfoh#readme>
Build-type:    Simple

Source-repository head
  Type:     git
  Location: https://github.com/zfoh/zfoh.ch

Executable zfoh
  Main-is:          Main.hs
  Hs-source-dirs:   src
  Default-language: Haskell2010
  Ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall

  Other-modules:
    Meetup
    Projects

  Build-depends:
    aeson           >=1.2   && < 2.3,
    base            >=4.7   && < 5,
    binary          >=0.8   && < 0.9,
    blaze-html      >=0.9   && < 0.10,
    bytestring      >=0.10  && < 0.12,
    filepath        >=1.4   && < 1.5,
    hakyll          >=4.12  && < 4.16,
    http-client     >=0.6   && < 0.8,
    http-client-tls >=0.3   && < 0.4,
    process         >=1.6   && < 1.7,
    text            >=1.2   && < 2.1,
    time            >=1.8   && < 1.10
